# libp2p-handshake-demo

./: .gitignore  Cargo.toml  README.md  cmd.sh  docker-compose.yml
docker/app/: Dockerfile
handshake/: Cargo.toml
handshake/src/: main.rs
src/: error.rs  identity.rs  io.rs  lib.rs  net.rs
src/io/: codec.rs  noise.rs  protobuf.rs
src/net/: connection.rs  multiaddr.rs  multistream.rs  noise.rs  upgrade.rs
src/payload/: keys.rs  mod.rs  noise.proto  noise.rs
