[package]
name = "libp2p_handshake_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "libp2p_handshake_lib"
path = "src/lib.rs"

[dependencies]
async-io = "2.3.4"
asynchronous-codec = "0.7.0"
bytes = "1.7.2"
ed25519-dalek = { version = "2.1.1", features = ["pem", "rand_core"] }
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
multiaddr = "0.18.2"
multibase = "0.9.1"
quick-protobuf = "0.8.1"
rand = "0.8.5"
snow = "0.9.6"
x25519-dalek = "2.0.1"

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
